Fix the alignment

--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -29,9 +29,7 @@ img {
   text-align: center;
 }
 
-.text {
-  text-align: center;
-}
+
 
 /* do not edit this footer */
 .footer {
